--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.76.1",
     "framer-motion": "^12.23.24",
+    "json2csv": "^6.0.0-alpha.2",
     "lucide-react": "^0.546.0",
     "next": "16.0.0",
     "papaparse": "^5.5.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-select": "^5.10.2",
     "recharts": "^3.3.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/json2csv": "^5.0.7",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19",
